--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-loader": "^1.1.9",
     "mysql-promise": "^4.1.0",
     "normalize.css": "^8.0.0",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "three": "^0.90.0"
