--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "three": "^0.90.0"
   },
   "devDependencies": {
