--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-polyfill": "^6.26.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2"
   },
   "devDependencies": {
