--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "homepage": "https://github.com/YourWishes/domsPlaceNew#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-tap-event-plugin": "^3.0.3",
+    "react-transition-group": "^2.3.1",
     "redux": "^4.0.0"
   },
   "devDependencies": {
