--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.0",
+    "nodemailer": "^4.6.7",
     "pg-promise": "^8.4.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -48,6 +49,7 @@
     "react-tap-event-plugin": "^3.0.3",
     "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
+    "sanitize-html": "^1.18.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "nodemon": "^1.17.5",
     "react-hot-loader": "^4.3.3",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   }
 }
