--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.6.7",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "pg-promise": "^8.4.4",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
