Site now works with IE! (And Google Bot Hopefully)

--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,21 @@
   "presets": [
     ["env", {
       "targets": {
-          "node": "current"
-        }
+        "node": "current",
+        "browsers": [
+          "Chrome >= 41",
+          "FireFox >= 44",
+          "Safari >= 7",
+          "Explorer 11",
+          "last 4 Edge versions"
+        ]
+      },
+      "useBuiltIns": false
     }],
     "react",
     "babel-polyfill"
+  ],
+  "ignore": [
+    "node_modules"
   ]
 }
