--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "responsive-loader": "^1.1.0",
     "sanitize-html": "^1.18.2",
     "sass-loader": "^7.0.3",
+    "sharp": "^0.20.5",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
