Finished building blog overview page.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nodemailer": "^4.6.8",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pg-promise": "^8.5.1",
+    "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
@@ -56,11 +57,14 @@
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-promise-middleware-actions": "^2.1.0",
     "responsive-loader": "^1.1.0",
     "sanitize-html": "^1.19.1",
     "sass-loader": "^7.1.0",
     "sharp": "^0.21.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.22.0"
