--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "7.0.0",
   "description": "Personal website for Dominic \"YourWishes\" Masters.",
   "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
   "repository": {
     "type": "git",
@@ -21,7 +26,37 @@
   },
   "homepage": "https://domsplace.com",
   "dependencies": {
+    "@types/react-helmet": "^5.0.15",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.39",
+    "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-styled-components": "^3.1.18",
+    "gatsby-plugin-typescript": "^2.1.26",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-sharp": "^2.3.13",
+    "normalize.css": "^8.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "react-hook-form": "^4.8.0",
+    "styled-components": "^5.0.0",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
-  }
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/styled-components": "^4.4.2",
+    "@types/yup": "^0.26.29"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
