--- a/src/public/tsconfig.json
+++ b/src/public/tsconfig.json
@@ -20,6 +20,7 @@
     "moduleResolution": "node",
     "baseUrl": "src",
     "paths": {
+      "@api/*": [ "api/*" ],
       "@components/*": [ "components/*" ],
       "@objects/*": [ "objects/*" ],
       "@settings/*": [ "settings/*" ],
