--- a/src/private/package.json
+++ b/src/private/package.json
@@ -9,7 +9,7 @@
     "start:dev": "cross-env NODE_ENV=development \"serverless offline --port 3001\"",
     "start": "npm run start:prod",
     "watch": "npm run start:dev",
-    "deploy": "echo \"Building private\""
+    "deploy": "echo \"Building private\"",
     "test": "yarn jest"
   },
   "repository": {
