--- a/src/public/package.json
+++ b/src/public/package.json
@@ -7,6 +7,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
+    "deploy": "echo \"Building public\"",
     "clean": "gatsby clean"
   },
   "repository": {
