--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: generic
+language: node_js
+
+node_js:
+  - "10.16.3"
   
 cache:
   yarn: true
@@ -8,7 +11,6 @@ cache:
 matrix:
   include:
     - env: PROJECT=src/private/
-      node_js: "10.16.3"
 
 install:
   - cd $PROJECT
