--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+node_modules_pc/
+node_modules_surface/
 jspm_packages/
 
 # Typescript v1 declaration files
@@ -57,10 +59,7 @@ typings/
 # dotenv environment variables file
 .env
 
-# custom
-dist/
 /package-lock.json
-/dist
-src/private/dist
-src/public/public
-.cache
+/nbproject/private/
+.vscode
+.serverless
