--- a/src/public/serverless.yml
+++ b/src/public/serverless.yml
@@ -6,7 +6,7 @@ frameworkVersion: ">=1.26.0"
 provider:
   name: aws
   runtime: nodejs10.x
-  stage: ${opt:stage, "test"}
+  stage: ${opt:stage, "prod"}
   region: ap-southeast-2
   memorySize: 512
     
