--- a/src/public/package.json
+++ b/src/public/package.json
@@ -33,6 +33,7 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-layout": "^1.1.22",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-styled-components": "^3.1.18",
@@ -44,19 +45,22 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^4.8.0",
+    "react-syntax-highlighter": "^12.2.1",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^5.0.0",
     "yup": "^0.28.1"
   },
   "devDependencies": {
-    "serverless": "^1.63.0",
-    "serverless-finch": "^2.5.2",
-    "serverless-plugin-include-dependencies": "^4.0.1",
     "@types/node": "^13.5.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
+    "@types/react-transition-group": "^4.2.3",
     "@types/styled-components": "^4.4.2",
-    "@types/yup": "^0.26.29"
+    "@types/yup": "^0.26.29",
+    "serverless": "^1.63.0",
+    "serverless-finch": "^2.5.2",
+    "serverless-plugin-include-dependencies": "^4.0.1"
   },
   "browserslist": [
     ">0.2%",
